# ai-canon

./: .gitignore  .zenodo.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  LICENSE-DATA  Makefile  README.md  pyproject.toml  scenarios.yaml
.github/workflows/: ci.yml
.wrangler/cache/: pages.json  wrangler-account.json
data/: abstracts.json  frontier.json  models_index.json
data/fixtures/: editions.json  metrics.json  works.json
data/releases/: FROZEN.json
data/resolved/: metrics.json
data/seeds/: SOURCES.sha256  books.json  edges.json  orgs.json  papers.json  persons.json
data/validation/: books_reconciliation.csv  papers_reconciliation.csv  voices_validation_register.csv
docs/: AI_Canon_MASTER_BUILD.md  method-note.md
og-image/: og.html  render_og.py
reports/: red_team_findings.md
scripts/: check_lock.py  check_sizes.py  guard_no_secrets.sh  guard_no_trackers.sh  reconcile_bibliography.py  static-gate.sh
site/: _headers  about.html  canon-50.html  challenges.html  changelog.html  data.html  frontier.html  index.html  library.html  llms.txt  method.html  models.html  organizations.html  papers.html  platforms.html  press.html  robots.txt  search.html  share.html  sitemap.xml  voices.html
site/assets/: canon.css  canon.js  search-index.js  search.js
site/work/: paper-0001.html  paper-0002.html  paper-0003.html  paper-0004.html  paper-0006.html  paper-0007.html  (+160 more)
tests/: test_canon.py  test_evidence.py  test_fixtures.py  test_overrides.py  test_release.py  test_render_security.py  test_security.py  test_site.py
(+1001 files in other folders)
