[project]
name = "ai-canon"
version = "0.3.0"
description = "The AI Canon — a free, method-backed, reproducible reference library for AI knowledge."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "openpyxl",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
